[tool.poetry]
name = "stress-test"
version = "0.1.0"
description = ""
authors = ["Cloves Paiva <cloves.paiva@extremedigital.com.br>"]
readme = "README.md"
packages = [{include = "stress_test"}]

[tool.poetry.dependencies]
python = "^3.10"
locust = "^2.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
